--- a/package.json
+++ b/package.json
@@ -12,10 +12,18 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "👇 ABOUT-bootstrap-command": "💡 scaffold and setup FaunaDB #",
+    "bootstrap": "node ./scripts/bootstrap-fauna-database.js",
+    "👇 ABOUT-start-command": "💡 start the app and server #",
+    "start": "npm-run-all --parallel start:app start:server",
+    "start:app": "react-scripts start",
+    "start:server": "netlify-lambda serve functions",
+    "👇 ABOUT-prebuild-command": "💡 before 'build' runs, run the 'bootstrap' command #",
+    "prebuild": "echo 'setup faunaDB' && npm run bootstrap",
+    "👇 ABOUT-build-command": "💡 build the react app and the serverless functions #",
+    "build": "npm-run-all --parallel build:**",
+    "build:app": "react-scripts build",
+    "build:functions": "netlify-lambda build functions"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +42,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "netlify-lambda": "^2.0.2",
+    "npm-run-all": "^4.1.5",
+    "faunadb": "^4.0.0"
   }
 }
